# rust-agent-ai

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/todo/: api-huggingface.md  cuda-implementation.md  huggingface-implementation-summary.md  roadmap-huggingface-integration.md
scripts/: test-huggingface.sh  test-interactive.sh  test-model.sh  test-persistence.sh  test-quick.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: custom_config.rs  quick_test.rs  simple.rs  test_context.rs  test_gguf_discovery.rs  test_huggingface.rs  test_llama_gated.rs  test_model.rs  test_quality.rs  test_serialization.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: huggingface.rs  llm.rs  mod.rs  model.rs  session.rs
src-tauri/src/context/: database.rs  manager.rs  mod.rs  models.rs  repository.rs  session.rs  settings.rs
src-tauri/src/huggingface/: client.rs  mod.rs  models.rs
src-tauri/src/llm/: config.rs  engine.rs  engine.rs.backup  mod.rs  model_manager.rs  tests.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src/components/chat/: ChatInput.tsx  ChatMessage.tsx  MessageList.tsx
src/components/common/: AppLoader.tsx  ErrorBoundary.tsx  Navigation.tsx  index.ts
src/components/huggingface/: GGUFModelCard.tsx  (+2 more)
src/constants/: paths.ts
src/hooks/: useHydration.ts
src/pages/: Chat.tsx  ErrorPage.tsx  Home.tsx  HuggingFace.tsx  ModelLoading.tsx  Models.tsx  ModelsPage.tsx  Settings.tsx  SettingsPage.tsx  index.ts
src/router/: index.tsx
src/stores/: chat.ts  huggingface.ts  index.ts  llm.ts  message.ts  session.ts
src/types/: gguf.ts  huggingface.ts  index.ts  llm.ts  message.ts  paths.ts  tool.ts
(+13 files in other folders)
